# alarmate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: change_mode.rs
src/: client.rs  constants.rs  errors.rs  lib.rs  main.rs  utils.rs
src/resources/: devices.rs  mod.rs  panel.rs  response.rs  result.rs  utils.rs
