[package]
name = "alarmate"
version = "0.3.0"
authors = ["Adrian Kumpf"]
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive", "env"], optional = true }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread"], optional = true }
thiserror = "2.0.17"

[features]
build-binary = ["clap", "tokio"]

[[bin]]
name = "alarmate"
required-features = ["build-binary"]

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
