[package]
name = "alarmate"
version = "0.4.0"
authors = ["Adrian Kumpf"]
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["form", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.26", features = ["derive"] }
num_enum = "0.7"
clap = { version = "4.5.60", features = ["derive", "env"], optional = true }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread"], optional = true }
thiserror = "2.0.18"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
build-binary = ["clap", "tokio"]

[[bin]]
name = "alarmate"
required-features = ["build-binary"]

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
